Updating Kubernetes deployment step
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/samples/dotnet-azurefunction/deploy/functionapp.yaml
+++ b/samples/dotnet-azurefunction/deploy/functionapp.yaml
@@ -31,3 +31,16 @@ spec:
           value: sample-topic
         - name: PubSubName
           value: pubsub
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: functionapp
+spec:
+  selector:
+    app: functionapp
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
