--- a/samples/dotnet-azurefunction/deploy/kafka-bindings.yaml
+++ b/samples/dotnet-azurefunction/deploy/kafka-bindings.yaml
@@ -8,7 +8,7 @@ spec:
   metadata:
   # Kafka broker connection setting
   - name: brokers
-    value: dapr-kafka.kafka:9092
+    value: "dapr-kafka.default.svc.cluster.local:9092" #localhost:9092 - for local kafka
   # consumer configuration: topic and consumer group
   - name: topics
     value: sample
