--- a/samples/dotnet-azurefunction/deploy/functionapp.yaml
+++ b/samples/dotnet-azurefunction/deploy/functionapp.yaml
@@ -16,6 +16,7 @@ spec:
       annotations:
         dapr.io/enabled: "true"
         dapr.io/app-id: "functionapp"
+        # Only define port of Dapr triggers are included
         dapr.io/app-port: "3001"
     spec:
       containers:
