Updating Kubernetes deployment steps (#180)
* Updating Kubernetes deployment step

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Updating Kubernetes deployment step

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* updating dapr configuration

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* updating dapr configuration

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* updating dapr configuration

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* updating dapr configuration

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* updating dapr configuration

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* updating dapr configuration

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

---------

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/samples/dotnet-azurefunction/deploy/functionapp.yaml
+++ b/samples/dotnet-azurefunction/deploy/functionapp.yaml
@@ -16,6 +16,7 @@ spec:
       annotations:
         dapr.io/enabled: "true"
         dapr.io/app-id: "functionapp"
+        # Only define port of Dapr triggers are included
         dapr.io/app-port: "3001"
     spec:
       containers:
@@ -31,3 +32,16 @@ spec:
           value: sample-topic
         - name: PubSubName
           value: pubsub
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: functionapp
+spec:
+  selector:
+    app: functionapp
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
