Add documentation for dapr sidecar not present and dapr configuration error (#181)
* Add troubleshooting docs

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Update quickstarts/javascript/deploy.yaml

Co-authored-by: Shubham Sharma <shubhash@microsoft.com>

* Add troubleshooting docs

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* merge with master (#15)

* moving dapr bindings and triggers to FunctionApp and getting rid of DaprFunctionApp (#158)

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Update README.md (#160)

---------

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>
Co-authored-by: Radhika B <46513504+rabollin@users.noreply.github.com>

* Update troubleshooting-guide.md

Co-authored-by: Shubham Sharma <shubhash@microsoft.com>

---------

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>
Co-authored-by: Shubham Sharma <shubhash@microsoft.com>
Co-authored-by: Radhika B <46513504+rabollin@users.noreply.github.com>

--- a/quickstarts/javascript/deploy.yaml
+++ b/quickstarts/javascript/deploy.yaml
@@ -30,9 +30,9 @@ spec:
         app: azure-function
       annotations:
         dapr.io/enabled: "true"
-        dapr.io/id: "functionapp"
+        dapr.io/app-id: "functionapp"
         # Only define port if Dapr triggers are included
-        dapr.io/port: "3001"
+        dapr.io/app-port: "3001"
     spec:
       containers:
       - name: azure-function
