--- a/samples/dotnet-isolated-azurefunction/dotnet-isolated-azurefunction.csproj
+++ b/samples/dotnet-isolated-azurefunction/dotnet-isolated-azurefunction.csproj
@@ -14,10 +14,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.10.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.7.0" />
-   
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Microsoft.Azure.Functions.Worker.Extensions.Dapr\Microsoft.Azure.Functions.Worker.Extensions.Dapr.csproj" />
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Dapr" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
